NetBSD Problem Report #50941

From www@NetBSD.org  Fri Mar 11 16:41:23 2016
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 221D87A0F3
	for <gnats-bugs@gnats.NetBSD.org>; Fri, 11 Mar 2016 16:41:23 +0000 (UTC)
Message-Id: <20160311164122.08FEA7ACB9@mollari.NetBSD.org>
Date: Fri, 11 Mar 2016 16:41:22 +0000 (UTC)
From: dcb314@hotmail.com
Reply-To: dcb314@hotmail.com
To: gnats-bugs@NetBSD.org
Subject: src/regress/sys/kern/allocfree/allocfree.c:244: possible bad % specifier ?
X-Send-Pr-Version: www-1.0

>Number:         50941
>Category:       misc
>Synopsis:       src/regress/sys/kern/allocfree/allocfree.c:244: possible bad % specifier ?
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    misc-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Fri Mar 11 16:45:00 +0000 2016
>Closed-Date:    Sat Mar 12 02:18:41 +0000 2016
>Last-Modified:  Sat Mar 12 02:18:41 +0000 2016
>Originator:     David Binderman
>Release:        cvs dated 20160311
>Organization:
>Environment:
>Description:
src/regress/sys/kern/allocfree/allocfree.c:244]: (warning) %d in format string (no. 1) requires 'int' but the argument type is 'size_t {aka unsigned long}'.

Source code is

       printf("%d\t%d", sz, i);

but

static size_t       sz = 128;

Suggest new code

      printf("%lu\t%d", sz, i);

>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50941 CVS commit: src/regress/sys/kern/allocfree
Date: Fri, 11 Mar 2016 13:26:40 -0500

 Module Name:	src
 Committed By:	christos
 Date:		Fri Mar 11 18:26:40 UTC 2016

 Modified Files:
 	src/regress/sys/kern/allocfree: allocfree.c

 Log Message:
 PR/50941: David Binderman: fix printf format


 To generate a diff of this commit:
 cvs rdiff -u -r1.1 -r1.2 src/regress/sys/kern/allocfree/allocfree.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Sat, 12 Mar 2016 02:18:41 +0000
State-Changed-Why:
christos committed it


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.