PR/50941: David Binderman: fix printf format